add duplicate method

--- a/tests/test_dependency_injection.ipynb
+++ b/tests/test_dependency_injection.ipynb
@@ -87,12 +87,21 @@
      "data": {
       "text/plain": [
        "hihi\n",
-       "   |--huhu=<class 'int'>\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------\n",
        "haha\n",
        "   |--hehe\n",
-       "      |--huhu=<class 'int'>\n",
-       "   |--huhu=<class 'int'>\n",
+       "      |--huhu\n",
+       "         |--name\n",
+       "         |--age\n",
+       "         |--test=<class 'int'>\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test=<class 'int'>\n",
        "----------------------------------------------------------------------------------------------------"
       ]
      },
@@ -119,8 +128,28 @@
     {
      "data": {
       "text/plain": [
-       "haha    HAHA(\\n  hehe=HEHE(\\n    huhu=8,\\n  ),\\n  huhu...\n",
-       "dtype: object"
+       "hihi\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test=<class 'int'>\n",
+       "----------------------------------------------------------------------------------------------------\n",
+       "haha\n",
+       "   |--hehe\n",
+       "      |--huhu\n",
+       "         |--name\n",
+       "         |--age\n",
+       "         |--test=<class 'int'>\n",
+       "   |--huhu\n",
+       "      |--name\n",
+       "      |--age\n",
+       "      |--test=<class 'int'>\n",
+       "----------------------------------------------------------------------------------------------------\n",
+       "new_huhu\n",
+       "   |--name\n",
+       "   |--age\n",
+       "   |--test=<class 'int'>\n",
+       "----------------------------------------------------------------------------------------------------"
       ]
      },
      "execution_count": 7,
@@ -128,6 +157,15 @@
      "output_type": "execute_result"
     }
    ],
+   "source": [
+    "injector.duplicate('huhu', 'new_huhu')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "objs = injector.run('haha', huhu=8)\n",
     "objs"
